[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "reddit-knowledge-graph"
version = "0.1.0"
description = "A pipeline that ingests Reddit posts/comments, extracts entities and sentiment via Claude, and builds a Neo4j knowledge graph queryable by an AI agent."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Neo4j", email = "benjamin.squire@neo4j.com" }]

dependencies = [
    # Reddit ingestion
    "praw>=7.7",
    # Neo4j
    "neo4j>=5.18",
    # LLM & agent
    "anthropic>=0.28",
    "langchain>=0.2",
    "langchain-anthropic>=0.1",
    "langchain-community>=0.2",
    "langgraph>=0.1",
    # Data & utilities
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "tenacity>=8.3",
    "rich>=13.7",
    "typer>=0.12",
    "httpx>=0.27",
    "tqdm>=4.66",
    # Scheduling
    "apscheduler>=3.10",
    # Testing
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
]

[project.scripts]
rkgraph-setup   = "scripts.setup_schema:main"
rkgraph-ingest  = "scripts.run_pipeline:main"
rkgraph-agent   = "scripts.run_agent:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
